Fix activity form alignment.

--- a/css/countrack.css
+++ b/css/countrack.css
@@ -91,7 +91,7 @@ em{
       border: 1px solid #27ae60;
       border-radius: 2px;
       padding: .2em;
-      width: 60%;
+      width: 50%;
     }
       .io form a[class*='button-']{
         margin: 0 .1em;
